<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".option">


    <ImageView
        android:id="@+id/single_doc"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/single_doc" />

    <TextView
        android:id="@+id/single_doc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/single_doc"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/single_doc"
        app:layout_constraintStart_toStartOf="@id/single_doc"
        app:layout_constraintTop_toBottomOf="@id/single_doc" />

    <ImageView
        android:id="@+id/multiple_doc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/single_doc"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/multiple_doc" />

    <TextView
        android:id="@+id/multiple_doc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/multiple_doc"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/multiple_doc"
        app:layout_constraintStart_toStartOf="@id/multiple_doc"
        app:layout_constraintTop_toBottomOf="@id/multiple_doc" />

    <ImageView
        android:id="@+id/book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/multiple_doc"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/book" />

    <TextView
        android:id="@+id/book_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/book"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/book"
        app:layout_constraintStart_toStartOf="@id/book"
        app:layout_constraintTop_toBottomOf="@id/book" />

    <ImageView
        android:id="@+id/aadhar_card"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="31dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/single_doc_text"
        app:srcCompat="@drawable/aadhaar_card" />

    <TextView
        android:id="@+id/aadhar_card_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/aadhar_card"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/aadhar_card"
        app:layout_constraintStart_toStartOf="@+id/aadhar_card"
        app:layout_constraintTop_toBottomOf="@+id/aadhar_card" />

    <ImageView
        android:id="@+id/voter_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="31dp"
        app:layout_constraintStart_toEndOf="@+id/aadhar_card"
        app:layout_constraintTop_toBottomOf="@+id/multiple_doc_text"
        app:srcCompat="@drawable/voter_id" />

    <TextView
        android:id="@+id/voter_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/voter_id"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/voter_id"
        app:layout_constraintStart_toStartOf="@+id/voter_id"
        app:layout_constraintTop_toBottomOf="@+id/voter_id" />

    <ImageView
        android:id="@+id/passport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/voter_id"
        app:layout_constraintTop_toBottomOf="@id/book_text"
        app:srcCompat="@drawable/passport" />

    <TextView
        android:id="@+id/passport_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/passport"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/passport"
        app:layout_constraintStart_toStartOf="@id/passport"
        app:layout_constraintTop_toBottomOf="@id/passport" />

    <ImageView
        android:id="@+id/pan_card"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="31dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aadhar_card_text"
        app:srcCompat="@drawable/pan_card" />

    <TextView
        android:id="@+id/pan_card_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pan_card"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/pan_card"
        app:layout_constraintStart_toStartOf="@+id/pan_card"
        app:layout_constraintTop_toBottomOf="@+id/pan_card" />

    <ImageView
        android:id="@+id/id_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="31dp"
        app:layout_constraintStart_toEndOf="@+id/pan_card"
        app:layout_constraintTop_toBottomOf="@+id/voter_id_text"
        app:srcCompat="@drawable/id_card" />

    <TextView
        android:id="@+id/id_card_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/id_card"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/id_card"
        app:layout_constraintStart_toStartOf="@+id/id_card"
        app:layout_constraintTop_toBottomOf="@+id/id_card" />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/id_card"
        app:layout_constraintTop_toBottomOf="@id/passport_text"
        app:srcCompat="@drawable/photo" />

    <TextView
        android:id="@+id/photo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/photo"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/photo"
        app:layout_constraintStart_toStartOf="@id/photo"
        app:layout_constraintTop_toBottomOf="@id/photo" />

    <ImageView
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="31dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pan_card_text"
        app:srcCompat="@drawable/signature" />

    <TextView
        android:id="@+id/sign_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/signature"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sign"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="@+id/sign"
        app:layout_constraintTop_toBottomOf="@+id/sign"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/qrCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="31dp"
        app:layout_constraintStart_toEndOf="@+id/sign"
        app:layout_constraintTop_toBottomOf="@+id/id_card_text"
        app:srcCompat="@drawable/qr_code" />

    <TextView
        android:id="@+id/qrCode_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="QR/Bar Code"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/qrCode"
        app:layout_constraintStart_toStartOf="@+id/qrCode"
        app:layout_constraintTop_toBottomOf="@+id/qrCode"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/import_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/qrCode"
        app:layout_constraintTop_toBottomOf="@+id/photo_text"
        app:srcCompat="@drawable/import_gallery" />

    <TextView
        android:id="@+id/import_gallery_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/import_from_gallery"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/import_gallery"
        app:layout_constraintStart_toStartOf="@id/import_gallery"
        app:layout_constraintTop_toBottomOf="@id/import_gallery"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>