<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/homeStartColor">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="21dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/accounts"
        android:contentDescription="@string/todo"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:text="@string/perfect_scanner"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/centerBg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="70dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/center" />

    <ImageView
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/centerBg"
        app:srcCompat="@drawable/line"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/allDocs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="7dp"
        android:text="@string/all_docs"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintStart_toStartOf="parent" />

    <SearchView
        android:layout_width="48dp"
        android:layout_height="26dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.991"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/centerBg"
        app:layout_constraintEnd_toEndOf="@+id/centerBg"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="@+id/centerBg"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <ImageButton
        android:id="@+id/cam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cam"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/docs"
        android:contentDescription="@string/todo"/>



</androidx.constraintlayout.widget.ConstraintLayout>